# autoresearch-chain

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-AGPL  LICENSE-CC-BY-SA  LICENSES.md  Makefile  NOTICE  README.md  THIRD_PARTY_NOTICES.md
crates/: README.md
crates/adversarial-sim/: Cargo.toml
crates/adversarial-sim/src/: lib.rs
crates/adversarial-sim/tests/: scenarios.rs
crates/challenge-engine/: Cargo.toml
crates/challenge-engine/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/domain-engine/: Cargo.toml
crates/domain-engine/src/: config.rs  error.rs  genesis.rs  lib.rs  registry.rs  rts.rs
crates/fork-engine/: Cargo.toml
crates/fork-engine/src/: lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: commands.rs  main.rs  ordering.rs  persistence.rs  queries.rs  server.rs  txapply.rs
crates/node/tests/: integration.rs
crates/protocol-rules/: Cargo.toml
crates/protocol-rules/src/: attestation.rs  block_lifecycle.rs  config.rs  error.rs  lib.rs  validator.rs
crates/protocol-types/: Cargo.toml
crates/protocol-types/src/: block.rs  challenge.rs  domain.rs  enums.rs  escrow.rs  fixtures.rs  fork.rs  frontier.rs  genesis.rs  ids.rs  lib.rs  metric.rs  policy.rs  token.rs  validate.rs  validation.rs
crates/protocol-types/tests/: foundation.rs
crates/reward-engine/: Cargo.toml
crates/reward-engine/src/: lib.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: lib.rs  state.rs
crates/simulator/tests/: scenarios.rs  snapshot.rs
crates/storage-model/: Cargo.toml
crates/storage-model/src/: artifact.rs  error.rs  hash.rs  lib.rs  store.rs
docs/: README.md  attack-model.md  autoresearch-relationship.md  economics-design.md  executive-summary.md  faq.md  first-principles.md  future-stage-3-training.md  genesis-and-track-initialization.md  governance-boundaries.md  implementation-plan.md  licensing.md  milestone-plan.md  project-narrative.md  project-scope.md  protocol-open-questions.md  protocol-v0.2.md  roadmap.md  terminology.md  user-workflows.md  what-this-is-and-is-not.md  whitepaper.md  why-now.md
fixtures/: README.md
fixtures/qmd/finetune/: eval.py  reward.py  train.py
fixtures/qmd/finetune/configs/: sft.yaml
fixtures/qmd/finetune/evals/: queries.txt
python/: README.md  pyproject.toml
python/arc_runner/: __init__.py  client.py  demo.py  http_client.py
python/arc_runner/autoresearch_adapter/: __init__.py
python/arc_runner/challenger/: __init__.py
python/arc_runner/domains/: __init__.py  qmd_experiment.py  qmd_query_expansion.py
python/arc_runner/evidence/: __init__.py
python/arc_runner/identity/: __init__.py
python/arc_runner/materialize/: __init__.py
python/arc_runner/proposer/: __init__.py
python/arc_runner/validator/: __init__.py
python/tests/: test_client.py  test_demo.py  test_http_client.py  test_identity.py  test_integration.py  test_materialize.py  test_qmd_genesis.py
simulations/: README.md  calibration-report.md
spec/: README.md
templates/: code-file-header.txt  documentation-file-header.txt
