[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-runner"
version = "0.0.1"
description = "Off-chain research execution runners for AutoResearch Chain."
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"

# No runtime dependencies yet. Expected early additions:
# - httpx or requests (protocol client communication)
# - pydantic (evidence bundle schemas)
# - click or typer (runner CLI)

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
