[package]
name = "arc-node"
description = "Minimal local runtime for AutoResearch Chain. Phase 1 target; depends on protocol core being validated first."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-protocol-types = { workspace = true }
arc-protocol-rules = { workspace = true }
arc-domain-engine = { workspace = true }
arc-fork-engine = { workspace = true }
arc-challenge-engine = { workspace = true }
arc-reward-engine = { workspace = true }
arc-storage-model = { workspace = true }
arc-simulator = { workspace = true }
arc-identity = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", default-features = false }
blake3.workspace = true

[dev-dependencies]
serde_json = "1"
ureq = { version = "2", default-features = false }
arc-identity = { workspace = true }
